--- a/com.happy.hackweb/pom.xml
+++ b/com.happy.hackweb/pom.xml
@@ -29,18 +29,16 @@
 			<artifactId>jersey-json</artifactId>
 			<version>1.8</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
 			<version>1.8</version>
 		</dependency>
-		
-		
 		<dependency>
-			<groupId>happyhack</groupId>
-			<artifactId>com.happy.hack</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.10.0</version>
 		</dependency>
 	</dependencies>
 	<build>
